# Aggregate

./: Cargo.toml  LICENSE  README.md
examples/server/: Cargo.toml
examples/server/src/: main.rs
src/: lib.rs
src/client/: mod.rs
src/errors/: mod.rs
src/server/: mod.rs
src/utils/: crypt.rs  data.rs  mod.rs  packets.rs  time.rs
