[package]
name = "aggregate"
version = "1.0.0"
edition = "2024"

[features]
server = []
client = []

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "macros", "sync"] }
flate2 = { version = "1.1.4", features = ["zlib"], default-features = false }
dashmap = { version = "6.1.0", features = ["inline"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.145"
magic-crypt = "4.0.1"
simd-json = "0.17.0"
chrono-tz = "0.10.4"
byteorder = "1.5.0"
chrono = "0.4.42"
tokio-socks = "0.5.2"
